added flip function & scripts

--- a/hero.html
+++ b/hero.html
@@ -16,30 +16,12 @@
     ></script>
     <title>Homepage</title>
   </head>
-  <body>
-    <section id="Homepage">
-        <div class="back__page">
-          <div class="goBack--function">
-            <button id="goBack">Go Back</button>
-          </div>
-          <div class="back__container">
-            <h1>This is all of my learned competence</h1>
-            <div class="back__content">
-              <i class="fa-brands fa-html5" style="color: #ff5733"></i>
-              <i class="fa-brands fa-css3" style="color: #338dff"></i>
-              <i class="fa-brands fa-sass" style="color: #b197fc"></i>
-              <i class="fa-brands fa-js" style="color: #ffd43b"></i>
-              <i class="fa-brands fa-php" style="color: #b197fc"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="About me">
-      <div class="aboutMe__container">
-        <div class="aboutMe__content"></div>
-      </div>
-    </section>
+<body>
+    <div class="homepage__container">
+      <div class="box" id="about">About Me</div>
+      <div class="box" id="contacts">Contacts</div>
+      <div class="box" id="projects">Projects</div>
+    </div>
 
     <script src="script.js"></script>
   </body>
