--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section id="hero" class="section hero vh-100">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 text-center text-lg-start">
+          <div class="col-lg-6  text-lg-start">
             <h1 class="display-4 fw-bold">Hello.</h1>
             <h1 class="display-5">
               I'm <span class="text-primary">Alex</span>.
