--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
     </section>
-<!--About Me Section-->
+    <!--About Me Section-->
     <section id="aboutMe" class="py-10 mt-8">
       <div class="container text-center text-light">
         <h1 class="mb-4 text-light">About Me</h1>
@@ -100,7 +100,7 @@
               <p class="card-text text-light">
                 With experience as a delivery driver and supervisor, I have
                 developed strong leadership and teamwork skills. I am currently
-                studying IT  and frequently work on group projects, which has
+                studying IT and frequently work on group projects, which has
                 taught me to manage multiple tasks simultaneously and prioritize
                 effectively. As a class representative, I take responsibility
                 and drive solutions, enhancing my ability to work in a
@@ -109,17 +109,16 @@
                 of the team.
               </p>
               <a href="#" class="btn btn-primary" id="cvButton">View "CV" </a>
-    
+
               <!-- Hidden image that will be shown when the button is pressed -->
-              <div id="cvImage" style="display:none; margin-top: 20px;">
-                <img src="/img/CV.jpg" alt="CV Image" class="img-fluid">
+              <div id="cvImage" style="display: none; margin-top: 20px">
+                <img src="/img/CV.jpg" alt="CV Image" class="img-fluid" />
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    
 
     <!-- PROJECT SECTION -->
     <section id="project" class="py-5">
@@ -218,8 +217,25 @@
       </div>
     </section>
     <!--FOOTER SECTION -->
-    <!--TODO// Fullfill THIS-->
-    <section id="footer"></section>
+
+    <section id="footer" class="section footer py-6">
+      <div class="card bg-success">
+        <div class="card-body">
+          <h5 class="card-title text-light">Follow my journey</h5>
+          <div class="icons gap-5">
+            <a href="/">
+              <i class="fa-brands fa-linkedin fs-1"></i>
+            </a>
+            <a href="/">
+              <i class="fa-brands fa-github fs-1 text-dark"></i>
+            </a>
+          </div>
+          <p class="card-text">
+            Javascript, Css3 & html5 was used creating this site
+          </p>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
