added links to brand icons

--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
                 developed strong leadership and teamwork skills. I am currently
                 studying IT and frequently work on group projects, which has
                 taught me to manage multiple tasks simultaneously and prioritize
-                effectively. As a class representative, I take responsibility
-                and drive solutions, enhancing my ability to work in a
-                structured manner under pressure. I am passionate about
-                delivering high-quality service and contributing to the success
-                of the team.
+                effectively...
               </p>
               <a href="#" class="btn btn-primary" id="cvButton">View "CV" </a>
 
@@ -223,10 +219,10 @@
         <div class="card-body">
           <h5 class="card-title text-light">Follow my journey</h5>
           <div class="icons gap-5">
-            <a href="/">
+            <a href="https://se.linkedin.com/in/alex-%C3%B6hlin-58476b2ab">
               <i class="fa-brands fa-linkedin fs-1"></i>
             </a>
-            <a href="/">
+            <a href="https://github.com/elFarfar">
               <i class="fa-brands fa-github fs-1 text-dark"></i>
             </a>
           </div>
