--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   class="btn btn-primary"
                   >GitHub</a
                 >
-                <a href="#" class="btn btn-secondary ms-2">Live Demo</a>
+                <a href="https://moviestowatch.onrender.com" class="btn btn-secondary ms-2">Live Demo</a>
               </div>
             </div>
           </div>
