--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   class="btn btn-primary"
                   >GitHub</a
                 >
-                <a href="#" class="btn btn-secondary ms-2">Live Demo</a>
+                <a href="#" class="btn btn-secondary ms-2">Coming Soon</a>
               </div>
             </div>
           </div>
