--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <!--NAV SECTION-->
     <nav class="navbar">
       <div class="container">
-        <a class="navbar-brand" href="#">Portfolio</a>
+        <a class="navbar-brand text-white" href="#">Portfolio</a>
         <button
-          class="navbar-toggler bg-primary"
+          class="navbar-toggler border-0 shadow-none"
           type="button"
           data-bs-toggle="collapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
           data-bs-target="#navbarNav"
         >
           <span class="navbar-toggler-icon"></span>
@@ -42,13 +44,13 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#aboutMe">ABOUT ME</a>
+              <a class="nav-link text-white" href="#aboutMe">ABOUT ME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">CONTACTS</a>
+              <a class="nav-link text-white" href="#contact">CONTACTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#project">PROJECTS</a>
+              <a class="nav-link text-white" href="#project">PROJECTS</a>
             </li>
           </ul>
         </div>
@@ -56,7 +58,7 @@
     </nav>
 
     <!-- HERO SECTION -->
-    <section id="hero" class="section hero vh-100">
+    <section id="hero" class="section hero vh-100 d-flex align-items-center">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 text-lg-start">
@@ -81,7 +83,7 @@
             <img
               src="/img/profile-pic.png"
               alt="Profile Photo"
-              class="img-fluid rounded-circle"
+              class="rounded-circle"
               id="profilePhoto"
             />
           </div>
@@ -104,7 +106,7 @@
                 taught me to manage multiple tasks simultaneously and prioritize
                 effectively...
               </p>
-              <a href="#" class="btn btn-primary" id="cvButton">View "CV" </a>
+              <a href="#" class="btn btn-dark border border-light" id="cvButton">View "CV" </a>
 
               <!-- Hidden image that will be shown when the button is pressed -->
               <div id="cvImage" style="display: none; margin-top: 20px">
@@ -134,10 +136,14 @@
               <div class="d-flex">
                 <a
                   href="https://github.com/chas-academy/MoviesToWatch-elfarfar"
-                  class="btn btn-primary"
+                  class="btn btn-dark border border-light"
                   >GitHub</a
                 >
-                <a href="https://moviestowatch.onrender.com" class="btn btn-secondary ms-2">Live Demo</a>
+                <a
+                  href="https://moviestowatch.onrender.com"
+                  class="btn btn-dark ms-2"
+                  >Live Demo</a
+                >
               </div>
             </div>
           </div>
@@ -150,7 +156,7 @@
               <div class="d-flex">
                 <a
                   href="https://github.com/chas-academy/u04-imdb-klon-grupp4"
-                  class="btn btn-primary"
+                  class="btn btn-dark border border-light"
                   >GitHub</a
                 >
                 <a href="#" class="btn btn-secondary ms-2">Coming Soon</a>
