--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=PT+Serif+Caption:ital@0;1&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=PT+Serif+Caption:ital@0;1&display=swap"
+    rel="stylesheet"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/fce38b1700.js"
       crossorigin="anonymous"
@@ -64,7 +64,7 @@
           <div class="col-lg-6 text-lg-start">
             <h1 class="display-4 fw-bold">Hello.</h1>
             <h1 class="display-5">
-              I'm <span class="text-primary">Alex</span>.
+              I'm <a href="https://github.com/elFarfar" class=" text-decoration-none fw-medium github-link">Alex</a>.
             </h1>
             <p class="lead">Fullstack Open Source Developer</p>
             <p>
@@ -106,7 +106,7 @@
                 taught me to manage multiple tasks simultaneously and prioritize
                 effectively...
               </p>
-              <a href="#" class="btn btn-dark border border-light" id="cvButton">View "CV" </a>
+              <a href="#" class="btn custom-btn" id="cvButton">View "CV" </a>
 
               <!-- Hidden image that will be shown when the button is pressed -->
               <div id="cvImage" style="display: none; margin-top: 20px">
@@ -136,7 +136,7 @@
               <div class="d-flex">
                 <a
                   href="https://github.com/chas-academy/MoviesToWatch-elfarfar"
-                  class="btn btn-dark border border-light"
+                  class="btn custom-btn"
                   >GitHub</a
                 >
                 <a
@@ -156,10 +156,10 @@
               <div class="d-flex">
                 <a
                   href="https://github.com/chas-academy/u04-imdb-klon-grupp4"
-                  class="btn btn-dark border border-light"
+                  class="btn custom-btn"
                   >GitHub</a
                 >
-                <a href="#" class="btn btn-secondary ms-2">Coming Soon</a>
+                <a href="#" class="btn btn-dark  ms-2">Coming Soon</a>
               </div>
             </div>
           </div>
@@ -221,18 +221,18 @@
     <!--FOOTER SECTION -->
 
     <section id="footer" class="section footer py-6">
-      <div class="card bg-success">
+      <div class="card bg-dark">
         <div class="card-body">
           <h5 class="card-title text-light">Follow my journey</h5>
-          <div class="icons gap-5">
+          <div class="icons gap-3 d-flex mt-3">
             <a href="https://se.linkedin.com/in/alex-%C3%B6hlin-58476b2ab">
               <i class="fa-brands fa-linkedin fs-1"></i>
             </a>
             <a href="https://github.com/elFarfar">
-              <i class="fa-brands fa-github fs-1 text-dark"></i>
+              <i class="fa-brands fa-github fs-1 "></i>
             </a>
           </div>
-          <p class="card-text">
+          <p class="card-text text-light">
             Javascript, Css3 & html5 was used creating this site
           </p>
         </div>
